--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -28,6 +29,7 @@
     "eslint": "8.57.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.12.1",
+    "supertest": "7.0.0",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
     "typescript": "5.4.5",
